Corrigindo bug no overflow do card-grid, mudanças no design, adicionando barra de pesquisa

--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -3,17 +3,15 @@
     min-width: 350px;
     max-height: 350px;
     min-height: 250px;
-    margin: 1rem auto;
+    border-radius: 5px;
+    position: relative;
+    width: 100%; /* ocupa a coluna inteira */
+    margin: 0 auto;
     padding: 1.5rem;
     background-color: #ffffff;
-    border-radius: 5px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     font-family: sans-serif;
-    /*height:max-content;*/
-    position: relative;
-    break-inside: avoid-column;
-    overflow-y: scroll;
-    /*scroll-behavior: smooth;*/
+    box-sizing: border-box;
   }
 
   /* Scrollbar elegante e discreta para navegadores que suportam */
@@ -55,7 +53,7 @@
     text-decoration: none;
     padding: 10px 18px;
     border-radius: 6px;
-    background-color: #e74c3c;
+    background-color: #1b2e4b;
     transition: background-color 0.3s;
     border-width: 1px;
     border-color: rgb(255, 255, 255);
@@ -67,5 +65,5 @@
   }
 
   .card-button:hover {
-    background-color: #c0392b;
+    background-color: #1565c0;
   }
