--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -3,13 +3,17 @@
 }
 
 .card-grid {
-    margin: 50px 20px 20px;
-    padding-top: 20px;
-    max-width: 90vw;
-    columns: 2;
-    border-radius: 8px;
-    background-color: #f0f0f0;
-    overflow-y: scroll;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 1.5rem;
+  padding: 20px;
+  margin: 10px 0px 15px 25px;
+  max-width: 95vw;
+  max-height: 545px;
+  overflow-y: auto;
+  border-radius: 8px;
+  background-color: #e9eff4;
+  box-sizing: border-box;
 }
 
 .card-grid::-webkit-scrollbar {
@@ -23,4 +27,16 @@
   
   .card-grid::-webkit-scrollbar-track {
     background: transparent;
+  }
+
+  .search-bar {
+    width: 100%;
+    max-width: 400px;
+    margin: 1.0rem auto 0.25rem;
+    display: block;
+    padding: 0.8rem 1rem;
+    font-size: 1rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
   }
