--- a/frontend/src/styles/TopBar.css
+++ b/frontend/src/styles/TopBar.css
@@ -1,12 +1,12 @@
 .top-bar {
-  background-color: #2c3e50;
+  background-color: #1b2e4b;
   color: white;
   padding: 0 40px;
   position: sticky;
   top: 0;
   z-index: 1000;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  height: 90px; /* barra mais grossa */
+  height: 70px; /* barra mais grossa */
 }
 
 .top-bar-content {
@@ -14,8 +14,9 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  max-width: 1200px;
+  /*max-width: 1200px;*/
   width: 800px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -37,12 +38,12 @@
   text-decoration: none;
   padding: 10px 18px;
   border-radius: 6px;
-  background-color: #e74c3c;
+  background-color: #2e7d32;
   transition: background-color 0.3s;
   font-size: 1rem;
 }
 
 .login-button:hover,
 .register-button:hover {
-  background-color: #c0392b;
+  background-color: #216925;
 }
